--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tracker-react-redux",
   "version": "1.0.0",
   "description": "Use React Redux with Meteor's Tracker",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/matb33/tracker-react-redux.git"
