--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Use React Redux with Meteor's Tracker",
   "main": "src/index.js",
+  "scripts": {
+    "build": "babel src --presets babel-preset-es2015 --out-dir dist"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/matb33/tracker-react-redux.git"
@@ -22,10 +25,12 @@
   },
   "homepage": "https://github.com/matb33/tracker-react-redux",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.13.1",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
-    "eslint-plugin-standard": "^1.3.2",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
