--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tracker-react-redux",
   "version": "1.0.0",
   "description": "Use React Redux with Meteor's Tracker",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist"
   },
