--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Use React Redux with Meteor's Tracker",
   "main": "dist/index.js",
   "files": [
-    "dist/native.js"
+    "dist/native.js",
+    "dist/connectTrackerRedux.js",
+    "dist/connectTrackerReduxNative.js",
+    "dist/createTrackerReduxContainer.js"
   ],
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist"
