--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Use React Redux with Meteor's Tracker",
   "main": "dist/index.js",
   "files": [
-    "dist/native.js",
-    "dist/connectTrackerRedux.js",
-    "dist/connectTrackerReduxNative.js",
-    "dist/createTrackerReduxContainer.js"
+    "native.js"
   ],
   "scripts": {
     "build": "babel src --presets babel-preset-es2015 --out-dir dist",
@@ -39,5 +36,8 @@
     "eslint-plugin-promise": "^1.3.2",
     "eslint-plugin-react": "^5.2.2",
     "eslint-plugin-standard": "^1.3.2"
+  },
+  "peerDependencies": {
+    "react-redux": "^4.4.5"
   }
 }
